# qtpim

./: .gitignore  .qmake.conf  TODO  dependencies.yaml  header.LGPL21  qt5pim.spec  qtpim.pro  sync.profile
doc/: compat.qdocconf  doc.pri  qt-cpp-ignore.qdocconf  qt-defines.qdocconf  qt5-dita.qdocconf  qt5.qdocconf  qtpim-cpp-ignore.qdocconf
doc/global/: qt-module-defaults.qdocconf
doc/src/: contacts-index.qdoc  contacts.qdoc  contactsactions.qdoc  contactsasync.qdoc  contactsclasses.qdoc  contactsengines.qdoc  contactsschema.qdoc  contactssync.qdoc  contactsusage.qdoc  examples.qdoc  external-resources.qdoc  icalsupport.qdoc  index.qdoc  organizer-index.qdoc  organizer.qdoc  organizeradvanced.qdoc  organizerasync.qdoc  organizerclasses.qdoc  organizerengines.qdoc  organizerschema.qdoc  organizersync.qdoc  qtcontacts-overview.qdoc  qtorganizer-overview.qdoc  qtpim.qdoc  tutorials.qdoc  vcardsupport.qdoc  versit-index.qdoc  versit.qdoc  versitclasses.qdoc  versitplugins.qdoc
examples/: examples.pro
examples/calendardemo/: calendardemo.pro
examples/contacts/: contacts.pro
examples/organizer/: organizer.pro
examples/qmlcontacts/: contacts-90.qml  contacts.qml  example-contact-view.qml  main.cpp  qmlapplicationviewer.cpp  qmlapplicationviewer.h  qmlcontacts.pro  qmlcontacts.qrc
examples/qmlcontacts-components/: contacts.qml
examples/qmlcontactslistview/: ContactEditor.qml  (+4 more)
modules/: qt_contacts.pri  qt_organizer.pri  qt_versit.pri  qt_versitorganizer.pri
src/: src.pro
tests/: tests.pro
tests/auto/cmake/test_modules/: CMakeLists.txt  main.cpp
(+2860 files in other folders)
